Day 10, lots of code but alright